style: fix spacing

--- a/Pixel-Sketch/styles.css
+++ b/Pixel-Sketch/styles.css
@@ -9,6 +9,7 @@ body {
 }
 
 h1 {
+  margin-top: 0.5em;
   margin-bottom: 0;
 }
 
@@ -58,9 +59,10 @@ input.slider-input {
 
 #control-panel {
   display: flex;
-  margin-top: 1em;
+  margin-top: 1.5em;
   border-style: solid;
-  border-color: orange;
+  border-width: 0.2em;
+  border-color: black;
 }
 
 @media only screen and (max-width: 767px) {
@@ -87,8 +89,8 @@ input.slider-input {
 
 @media only screen and (min-width: 1024px) {
   #grid-container {
-    width: 600px;
-    height: 600px;
+    width: 550px;
+    height: 550px;
   }
 
   #control-panel {
